--- a/src/BlogGeneratorTests/BlogGeneratorTests.fsproj
+++ b/src/BlogGeneratorTests/BlogGeneratorTests.fsproj
@@ -57,9 +57,12 @@
   </Target>
   -->
   <ItemGroup>
-    <Compile Include="AssemblyInfo.fs" />
     <None Include="paket.references" />
     <Content Include="App.config" />
+    <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="PostDestinationSpec.fs" />
+    <Compile Include="GeneratorSpec.fs" />
+    <Compile Include="PostSourceSpec.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
@@ -83,6 +86,20 @@
         <Reference Include="FSharp.Compiler.Service">
           <HintPath>..\..\packages\FSharp.Compiler.Service\lib\net45\FSharp.Compiler.Service.dll</HintPath>
           <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+      </ItemGroup>
+    </When>
+  </Choose>
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.5.2'">
+      <ItemGroup>
+        <Reference Include="FSharp.Data">
+          <HintPath>..\..\packages\FSharp.Data\lib\net40\FSharp.Data.dll</HintPath>
+          <Private>True</Private>
+          <Paket>True</Paket>
+        </Reference>
+        <Reference Include="System.Xml.Linq">
           <Paket>True</Paket>
         </Reference>
       </ItemGroup>
